# hexlet_homework

./: Makefile  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/templates/: index.html
