[project]
name = "hexlet-code"
version = "0.1.0"
description = "This folder contains homework project called Page_Analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "gunicorn",
    "jinja2",
    "python-dotenv",
    "pylint",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control]
disable = ["C0114", "C0116", "C0304"]
